Revert "F:view OtherPage working with Shell P: Router NotF"
This reverts commit 3ee08a8cef1ea5e041c5baca7896645ca185341b.

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -28,6 +28,9 @@
 					],
 					"fallbackLocale": ""
 				}
+			},
+			"": {
+				"dataSource": "employeeRemote"
 			}
 		},
 		"routing": {
@@ -47,10 +50,6 @@
 				"pattern": "",
 				"name": "appHome",
 				"target": "home"
-			}, {
-				"pattern": "OtherPage",
-				"name": "OtherPage",
-				"target": "otherPage"
 			}],
 			"targets": {
 				"home": {
@@ -62,11 +61,6 @@
 				   "viewId": "notFound",
 				   "viewName": "NotFound",
 				   "transition": "show"
-				},
-				"otherPage": {
-					"viewId": "otherPage",
-					"viewName": "OtherPage",
-					"viewLevel" : 1
 				}
 			}
 		},
