URL for while, solved, theme changed for Sap_fiori_3

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -39,12 +39,12 @@
 				"controlAggregation": "pages",
 				"transition": "slide",
 				"bypassed": {
-				   "target": "notFound"
+				   "target": "home"
 				},
 				"async": true
 			},
 			"routes": [{
-				"pattern": "",
+				"pattern": "Home",
 				"name": "appHome",
 				"target": "home"
 			}, {
